# bube-image-duplicate-detection

./: .gitignore  Dockerfile  Example.ipynb  Experiment.ipynb  README.en.md  README.md  pyproject.toml
.github/workflows/: docker.yml  python-app.yml
bube/: __init__.py  __main__.py
bube/config/: config.py
bube/logger/: logger.py
bube/models/: __init__.py  duplicate_report.py  image_embedding.py
bube/repository/: __init__.py  embedded_chroma_db.py  pgvector.py  setup_pgvector.sql  vector_db_repository.py
bube/routers/: __init__.py  embedding_controller.py  feex_controller.py
bube/services/: __init__.py
bube/services/feex_service/: __init__.py  feex_service.py
bube/services/image_embedding_model/: __init__.py  image_embedding_model.py  image_preprocessing.py
bube/services/local_image_service/: __init__.py  local_image_service.py  local_img_reader.py
bube/services/remote_image_service/: __init__.py  remote_image_service.py
tests/: test_embeddings_and_duplicates.py  test_local_image_service.py
